-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
-
2578d72a7 (dev), cf9e8434e (6.9), 815ca4865 (6.8)
Building Qt for QNX in debug mode fails at qtimezonelocale.cpp
[887/10856] Building CXX object qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezonelocale.cpp.o FAILED: qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezonelocale.cpp.o C:\QNX\qnx71\host\win64\x86_64\usr\bin\q++.exe -Vgcc_ntoaarch64le -Wc,-isysroot,C:/QNX/qnx71//target/qnx7 -lang-c++ -DPCRE2_CODE_UNIT_WIDTH=16 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_CONTEXTLESS_CONNECT -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QPAIR -DQT_NO_QSNPRINTF -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_NODISCARD_FILE_OPEN -DQT_USE_QSTRINGBUILDER -D_FORTIFY_SOURCE=2 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D_LIBCPP_HARDENING_MODE=_LIBCPP_HARDENING_MODE_EXTENSIVE -D_REENTRANT -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib/Core_autogen/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore -IC:/Qt/6.8.1/Src/qtbase/src/corelib -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib/global -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib/kernel -IC:/Qt/6.8.1/Src/qtbase/src/corelib/../3rdparty/tinycbor/src -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1 -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1/QtCore -IC:/Qt/6.8.1/Src/qtbase/src/corelib/../3rdparty/double-conversion/double-conversion -IC:/Qt/6.8.1/Src/qtbase/src/corelib/../3rdparty/double-conversion -IC:/Qt/6.8.1/Src/qtbase/src/corelib/../3rdparty/forkfd -IC:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/src/corelib/.rcc -IC:/Qt/6.8.1/Src/qtbase/mkspecs/qnx-aarch64le-qcc -IC:/Qt/6.8.1/Src/qtbase/src/3rdparty/pcre2/src -g -g -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fexceptions -Wno-invalid-offsetof -fstack-protector-strong -fstack-clash-protection -Wp,-MD,qtbase\src\corelib\CMakeFiles\Core.dir\time\qtimezonelocale.cpp.o.d -Wp,-MT,qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezonelocale.cpp.o -Wp,-MF,qtbase\src\corelib\CMakeFiles\Core.dir\time\qtimezonelocale.cpp.o.d -o qtbase/src/corelib/CMakeFiles/Core.dir/time/qtimezonelocale.cpp.o -c C:/Qt/6.8.1/Src/qtbase/src/corelib/time/qtimezonelocale.cpp In file included from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/qassert.h:1, from C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qglobal.h:35, from C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qglobal_p.h:19, from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1/QtCore/private/qglobal_p.h:1, from C:/Qt/6.8.1/Src/qtbase/src/corelib/time/qtimezonelocale_p.h:17, from C:/dev/qt-build-6.8.1-qnx-aarch64le-static/qtbase/include/QtCore/6.8.1/QtCore/private/qtimezonelocale_p.h:1, from C:/Qt/6.8.1/Src/qtbase/src/corelib/time/qtimezonelocale.cpp:4: C:/Qt/6.8.1/Src/qtbase/src/corelib/time/qtimezonelocale.cpp: In function 'constexpr UCalendarDisplayNameType {anonymous}::ucalDisplayNameType(QTimeZone::TimeType, QTimeZone::NameType)': C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:46:87: error: call to non-'constexpr' function 'void qt_assert_x(const char*, const char*, const char*, int)' # define Q_ASSERT_X(cond, where, what) ((cond) ? static_cast<void>(0) : qt_assert_x(where, what, __FILE__, __LINE__)) ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:70:9: note: in expansion of macro 'Q_ASSERT_X' Q_ASSERT_X(false, "Q_UNREACHABLE()", "Q_UNREACHABLE was reached");\ ^~~~~~~~~~ C:/Qt/6.8.1/Src/qtbase/src/corelib/global/qassert.h:78:44: note: in expansion of macro 'Q_UNREACHABLE' # define Q_UNREACHABLE_RETURN(...) do { Q_UNREACHABLE(); return __VA_ARGS__; } while (0) ^~~~~~~~~~~~~ C:/Qt/6.8.1/Src/qtbase/src/corelib/time/qtimezonelocale.cpp:34:5: note: in expansion of macro 'Q_UNREACHABLE_RETURN' Q_UNREACHABLE_RETURN(UCAL_STANDARD); ^~~~~~~~~~~~~~~~~~~~ cc: C:/QNX/qnx71//host/win64/x86_64/usr/lib/gcc/aarch64-unknown-nto-qnx7.1.0/8.3.0/cc1plus caught signal 1
| For Gerrit Dashboard: QTBUG-132698 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 616069,6 | Remove constexpr from a function that doesn't need it, and asserts | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 616644,2 | Remove constexpr from a function that doesn't need it, and asserts | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 616730,2 | Remove constexpr from a function that doesn't need it, and asserts | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |